--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
     tools:context="ch.ethz.inf.vs.a1.pascalo.ble.vs_pascalo_blesensirion.MainActivity">
 
     <TextView
+        android:id="@+id/body_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="" />
 </RelativeLayout>
