--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,9 +11,9 @@
     tools:context="ch.ethz.inf.vs.a1.pascalo.ble.vs_pascalo_blesensirion.MainActivity">
 
     <ListView
-        android:id="@+id/devicesListView"
+        android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
